Moved from Java 1.6->1.4/JDIC. This means a change to Tray calls. Also, some tidy up of debug code. Also, added health icons to the popup menu.